Move aws credential gathering to credential providers

--- a/package.json
+++ b/package.json
@@ -25,12 +25,12 @@
 		"axios": "^1.4.0",
 		"debug": "^4.3.4",
 		"hpagent": "^1.2.0",
-		"lodash": "^4.17.21",
 		"mocha": "^10.2.0",
 		"patch-package": "^8.0.0",
 		"prettier": "^2.8.8"
 	},
 	"dependencies": {
+		"@aws-sdk/credential-providers": "^3.389.0",
 		"http-mitm-proxy": "^1.0.0"
 	}
 }
