Fix canonical headers in canonical request
The canonical headers are a list of, and only of, the headers
to sign. Tests until now only happened to use headers that were
also signed. The JS client signs all headers. The AWS CLI however only
signs some of the headers.

Added a lot more debugging calls to help find issues like the
headers getting set.

--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
 	"main": "src/index.js",
 	"scripts": {
 		"postinstall": "patch-package",
+		"start": "node ./src/index.js",
+		"build": "",
 		"test": "mocha -v --require ./test/hooks.js --parallel test/**/*.test.js",
 		"format": "prettier --write --config package.json lib",
 		"format:check": "npm run format -- --check --no-write"
@@ -22,7 +24,6 @@
 	"devDependencies": {
 		"@aws-sdk/client-sts": "^3.363.0",
 		"@aws-sdk/node-http-handler": "^3.360.0",
-		"axios": "^1.4.0",
 		"debug": "^4.3.4",
 		"hpagent": "^1.2.0",
 		"mocha": "^10.2.0",
